[package]
name = "leptos_hydrated"
version = "0.6.0"

edition = "2024"
authors = ["David Darrell"]
license = "MIT"
description = "A component to hydrate and manage interactive hydration state in Leptos 0.8"
keywords = ["leptos", "ssr", "hydration", "wasm"]
categories = ["web-programming"]
repository = "https://github.com/incon/leptos_hydrated"
readme = "README.md"
documentation = "https://docs.rs/leptos_hydrated"

[features]
ssr     = ["leptos/ssr", "dep:serde_json"]
hydrate = ["dep:js-sys", "dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
leptos           = { version = "0.8" }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = { version = "1.0", optional = true }
js-sys           = { version = "0.3", optional = true }
wasm-bindgen     = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
tokio        = { version = "1.51", features = ["rt", "macros", "time"] }
any_spawner  = { version = "0.3.0", features = ["tokio"] }